--- a/facility.html
+++ b/facility.html
@@ -49,7 +49,7 @@
                             <a class="nav-link" href="faqs.html">FAQs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -177,7 +177,7 @@
                                 <li><a href="#">The Academy</a></li>
                                 <li><a href="facility.html">Facility</a></li>
                                 <li><a href="faqs.html">FAQs</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
                         <div class="col-md-2">
