--- a/contact.html
+++ b/contact.html
@@ -58,20 +58,20 @@
 
         <!-- header ends -->
 
-          <!-- contact banner starts -->
+        <!-- contact banner starts -->
 
-        <div class="fac-banner">
+        <div class="contact-banner">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 col-lg-2 col-xl-2">
                         <img src="images/facility-image/Symbols.png"
                             alt="symbols">
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-3 txt">
+                    <div class="col-md-6 col-lg-5 col-xl-4 txt">
                         <h1><span>Co</span>ntact</h1>
                         <p>You Can Get In Touch With The Details Below</p>
                     </div>
-                    <div class="col-md-3 col-lg-4 col-xl-3 tt">
+                    <div class="col-md-2 col-lg-2 col-xl-2 tt">
                         <img src="images/facility-image/Symbols2.png"
                             alt="symbol2">
                     </div>
@@ -80,5 +80,42 @@
         </div>
 
         <!-- contact banner ends -->
+
+        <!-- form starts -->
+
+        <div class="form-ctn">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 txt">
+                        <h1>Get in <span>Touch</span></h1>
+                        <p>Enim tempor eget pharetra facilisis sed maecenas
+                            adipiscing. Eu leo molestie vel, ornare non id
+                            blandit netus.</p>
+                        <form action="post">
+                            <input type="text" name="name" id="name"
+                                placeholder="Name"><br>
+                            <input type="email" name="email" id="email"
+                                placeholder="Email"><br>
+                            <input type="text" name="pnumber" id="pnumber"
+                                placeholder="Phone"><br>
+                            <input type="text" name="subject" id="subject"
+                                placeholder="Subject"><br>
+                            <textarea name="message" id="message"
+                                placeholder="Message"></textarea><br>
+                            <a href="#">Send</a>
+                        </form>
+                    </div>
+                    <div class="col-md-6 map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253682.63648036117!2d3.119142848718881!3d6.5480282433992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8b2ae68280c1%3A0xdc9e87a367c3d9cb!2sLagos!5e0!3m2!1sen!2sng!4v1751411891481!5m2!1sen!2sng"
+                            width="600" height="450" style="border:0;"
+                            allowfullscreen loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- form ends -->
     </body>
 </html>
