--- a/contact.html
+++ b/contact.html
@@ -117,5 +117,151 @@
         </div>
 
         <!-- form ends -->
+
+        <!-- contact-last sec starts -->
+
+        <div class="ct-last">
+            <div class="container">
+                <div class="ct-last1">
+                    <div class="row">
+                        <div class="col-md-4 last-box">
+                            <div class="icon">
+                                <i class="bi bi-telephone-fill"></i>
+                            </div>
+                            <div class>
+                                <p>(+234) - 913 597 1419</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 last-box uno ik">
+                            <div class>
+                                <img
+                                    src="images/contact-images/u-icon.png"
+                                    alt="icon">
+                            </div>
+                            <div class>
+                                <p class="cw">training@aledoyacademy.com</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 last-box">
+                            <div class="icon">
+                                <i class="bi bi-cursor-fill"></i>
+                            </div>
+                            <div class>
+                                <p>Aledoy Solutions Limited
+                                    Abbey Mortgage Bank Building
+                                    51, Okota Road,
+                                    Okota-Isolo Lagos</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- contact-last sec ends -->
+
+        <!-- last-sec starts -->
+
+        <div class="last-sec">
+            <div class="container">
+                <p>ARE YOU READY?</p>
+                <h2>Be a part of our <span>Hall of Fame</span></h2>
+                <a href="#">JOIN US</a>
+            </div>
+        </div>
+
+        <!-- last sec-ends -->
+
+         <!-- footer starts -->
+
+        <footer>
+            <div class="footer-ctn">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <img src="images/logo.png" alt="logo">
+                        </div>
+                        <div class="col-md-2">
+                            <ul>
+                                <li>Quicklinks</li>
+                                <li><a href="#">The Academy</a></li>
+                                <li><a href="facility.html">Facility</a></li>
+                                <li><a href="faqs.html">FAQs</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-2">
+                            <ul>
+                                <li>Course</li>
+                                <li><a href="#">Web Design Frontend</a></li>
+                                <li><a href="#">Product Design (UI/UX)</a></li>
+                                <li><a href="#">Data Science</a></li>
+                                <li><a href="#">Python</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3">
+                            <p class="li-gng">Contact</p>
+                            <div class="omo">
+                                <div class>
+                                    <i class="bi bi-geo-alt"></i>
+                                </div>
+                                <div class="txt">
+                                    <p>Abbey Mortgage Bank Building
+                                        51 Okota Road, Chemist Bus Stop,
+                                        Okota-Isolo
+                                        Lagos, Nigeria</p>
+                                </div>
+                            </div>
+                            <div class="omo">
+                                <div class>
+                                    <i class="bi bi-envelope"></i>
+                                </div>
+                                <div class="txt">
+                                    <p>training@aledoyacademy.com</p>
+                                </div>
+                            </div>
+                            <div class="omo">
+                                <div class>
+                                    <i class="bi bi-telephone"></i>
+                                </div>
+                                <div class="txt">
+                                    <p>(+234) 913 597 1419</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <p class="li-gng">Join our newsletter</p>
+                            <div class="form">
+                                <div class="email">
+                                    <input type="email"
+                                        placeholder="Email Address">
+                                </div>
+                                <div class="link">
+                                    <a href="#">Submit</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 ft-icons">
+                            <span><i class="bi bi-facebook"></i></span>
+                            <span><i class="bi bi-instagram"></i></span>
+                            <span><i class="bi bi-twitter"></i></span>
+                            <span><i class="bi bi-linkedin"></i></span>
+                        </div>
+                        <div class="col-md-6">
+                            <p><i class="bi bi-c-circle"></i>2023 Aledoy
+                                Academy. All rights reserved</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- footer ends -->
     </body>
 </html>
