web dev page done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap"
             rel="stylesheet">
     </head>
+
     <body>
 
         <!-- header starts -->
@@ -40,7 +42,8 @@
                             <a class="nav-link" href="#">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="facility.html">Facility</a>
+                            <a class="nav-link"
+                                href="facility.html">Facility</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Student Portfolio</a>
@@ -244,7 +247,7 @@
                         <div class="col-md-3">
                             <p class="li-gng">Contact</p>
                             <div class="omo">
-                                <div class="">
+                                <div class>
                                     <i class="bi bi-geo-alt"></i>
                                 </div>
                                 <div class="txt">
@@ -255,7 +258,7 @@
                                 </div>
                             </div>
                             <div class="omo">
-                                <div class="">
+                                <div class>
                                     <i class="bi bi-envelope"></i>
                                 </div>
                                 <div class="txt">
@@ -263,7 +266,7 @@
                                 </div>
                             </div>
                             <div class="omo">
-                                <div class="">
+                                <div class>
                                     <i class="bi bi-telephone"></i>
                                 </div>
                                 <div class="txt">
@@ -275,7 +278,8 @@
                             <p class="li-gng">Join our newsletter</p>
                             <div class="form">
                                 <div class="email">
-                                    <input type="email" placeholder="Email Address">
+                                    <input type="email"
+                                        placeholder="Email Address">
                                 </div>
                                 <div class="link">
                                     <a href="#">Submit</a>
@@ -292,10 +296,11 @@
                             <span><i class="bi bi-facebook"></i></span>
                             <span><i class="bi bi-instagram"></i></span>
                             <span><i class="bi bi-twitter"></i></span>
-                            <span><i class="bi bi-linkedin"></i></span> 
+                            <span><i class="bi bi-linkedin"></i></span>
                         </div>
                         <div class="col-md-6">
-                            <p><i class="bi bi-c-circle"></i>2023 Aledoy Academy. All rights reserved</p>
+                            <p><i class="bi bi-c-circle"></i>2023 Aledoy
+                                Academy. All rights reserved</p>
                         </div>
                     </div>
                 </div>
@@ -304,4 +309,5 @@
 
         <!-- footer ends -->
     </body>
+
 </html>
