--- a/wdf.html
+++ b/wdf.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,63 +14,363 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap"
             rel="stylesheet">
     </head>
+
     <body>
 
         <!-- header starts -->
+        <header class="m2">
 
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand" href="#"><img src="images/logo.png"
-                        alt></a>
-                <button class="navbar-toggler" type="button"
-                    data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse menu" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
-                                href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">The Academy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link"
-                                href="facility.html">Facility</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Student Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="faqs.html">FAQs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                    </ul>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container">
+                    <a class="navbar-brand" href="#"><img src="images/logo.png"
+                            alt></a>
+                    <button class="navbar-toggler" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse menu" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                    href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">The Academy</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Courses</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link"
+                                    href="facility.html">Facility</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Student
+                                    Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="faqs.html">FAQs</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link"
+                                    href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+            <!-- header ends -->
+
+            <!-- banner starts -->
+            <div class="wdf-banner">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="txt">
+                                <p>Courses</p>
+                                <h1>Web Design Frontend</h1>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="images/wdf-images/Frontend.png"
+                                alt="banner">
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
+            <!-- banner ends -->
+        </header>
 
-        <!-- header ends -->
+        <!-- wdf-sec1 starts -->
 
-        <!-- banner starts -->
-        <div class="wdf-banner">
+        <div class="wdf-sec1">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
-                        <p>Courses</p>
-                        <h1>Web Design Frontend</h1>
+                    <div class="col-md-5 col-lg-6 txt">
+                        <h5>Do you want to bridge a gap in your web skills?</h5>
+                        <p>Come let's show you how to get your hands on HTML,
+                            CSS, BOOTSTRAP, WORDPRESS, and other web tools. This
+                            is an intensive web design training programme,
+                            designed to cover all the areas that you will need
+                            in your web design and development career. We will
+                            also show you how to source materials to improve
+                            your personal development. At the end of the
+                            programme, you will be efficient with writing your
+                            HTML codes, styling your pages using Bootstrap,
+                            registering your domain names and hosting it. You
+                            also have the opportunity to join the network of
+                            developers that we outsource projects to. Come and
+                            start a career from what you will be learning.</p>
+                    </div>
+
+                    <div class="col-md-7 col-lg-6">
+                        <p>You will learn how to:</p>
+                        <div class="r1">
+                            <div class="row">
+                                <div class="col-6 col-md-4">
+                                    <div class="bx one sp">
+                                        <p>Design your website layout using
+                                            Figma</p>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <div class="bx red two sp">
+                                        <p>Convert your design to code using
+                                            HTML</p>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-4 mb-4">
+                                    <div class="bx three">
+                                        <p>Add styles to your codes using CSS &
+                                            Bootstrap</p>
+                                    </div>
+                                </div>
+
+                                <div class="col-6 col-md-4">
+                                    <div class="bx four sp">
+                                        <p>Add effects to your
+                                            website layout using
+                                            Javascript</p>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <div class="bx red five sp">
+                                        <p>Build user interfaces
+                                            for applications
+                                            using React JS</p>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <div class="bx six">
+                                        <p>Register your
+                                            domain name and
+                                            host your website</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- banner ends -->
+        <!-- wdf-sec1 ends -->
+
+        <!-- wdf sec2 starts -->
+
+        <div class="wdf-sec2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>This training is for:</h4>
+                        <ol>
+                            <li> Young school leavers who aim to position
+                                themselves for the numerous opportunities that
+                                are embedded in the world of tech</li>
+                            <li> Young graduates who seek a career path as a web
+                                developer, software developer or as a full-stack
+                                developer</li>
+                            <li> Employed individuals who need a side
+                                hustle</li>
+                            <li>Unemployed or underemployed youths who feel
+                                stuck and would like to delve into a new career
+                                path</li>
+                            <li> Innovators and entrepreneurs who seek the
+                                necessary skills to help them build new products
+                                and take these products to market sooner and
+                                more effectively</li>
+                            <li> Business leaders who seek insights on how to
+                                automate their manual processes</li>
+                            <li> Individuals who aim to position themselves as a
+                                brand and would like to make their services
+                                visible to potential clients</li>
+                            <li> Young business owners who want to harness the
+                                opportunity the world wide web has to offer for
+                                their business.</li>
+                            <li>Innovators whose designers are never really able
+                                to replicate the ideas they envision.</li>
+                        </ol>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>Bonus Courses</h4>
+                        <ol>
+                            <li>How to use add-on domains</li>
+                            <li> How to set up and manage dedicated emails</li>
+                            <li>Participants will be awarded certificates at the
+                                completion of the training</li>
+                            <li> Participants will be exposed to internships and
+                                job opportunities</li>
+                            <li> Free support and mentorship after completion of
+                                training</li>
+                            <li>Free refresher classes for students</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- wdf sec2 ends -->
+
+        <!-- wdf sec3 starts -->
+
+        <div class="wdf-sec3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-6 col-md-4">
+                                <div class="ctn sp">
+                                    <img src="images/wdf-images/schedule.png"
+                                        alt="sc">
+                                    <p>Wednesday March 1, 2023</p>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-4">
+                                <div class="ctn sp">
+                                    <img src="images/wdf-images/duration.png"
+                                        alt="hg">
+                                    <p>8 Weeks</p>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-4">
+                                <div class="ctn mb-4">
+                                    <img src="images/wdf-images/clock (1).png"
+                                        alt="clo">
+                                    <p>10:00AM - 4:00PM</p>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-8">
+                                <div class="ctn ps">
+                                    <img src="images/wdf-images/location.png"
+                                        alt="loc">
+                                    <p>Abbey Mortgage Bank Building 51, Okota
+                                        Road,
+                                        Okota-Isolo, Lagos, Nigeria.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="ctn">
+                                    <img src="images/wdf-images/price.png"
+                                        alt="pri">
+                                    <p>N120,000</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 txt">
+                        <p>Do you want to bridge a gap in your web skills?</p>
+                        <a href="#">Book A Seat</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- wdf sec3 ends -->
+
+         <!-- last-sec starts -->
+
+        <div class="last-sec">
+            <div class="container">
+                <p>ARE YOU READY?</p>
+                <h2>Be a part of our <span>Hall of Fame</span></h2>
+                <a href="#">JOIN US</a>
+            </div>
+        </div>
+
+        <!-- last sec-ends -->
+
+          <!-- footer starts -->
+
+        <footer>
+            <div class="footer-ctn">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <img src="images/logo.png" alt="logo">
+                        </div>
+                        <div class="col-md-2">
+                            <ul>
+                                <li>Quicklinks</li>
+                                <li><a href="#">The Academy</a></li>
+                                <li><a href="facility.html">Facility</a></li>
+                                <li><a href="faqs.html">FAQs</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-2">
+                            <ul>
+                                <li>Course</li>
+                                <li><a href="#">Web Design Frontend</a></li>
+                                <li><a href="#">Product Design (UI/UX)</a></li>
+                                <li><a href="#">Data Science</a></li>
+                                <li><a href="#">Python</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3">
+                            <p class="li-gng">Contact</p>
+                            <div class="omo">
+                                <div class>
+                                    <i class="bi bi-geo-alt"></i>
+                                </div>
+                                <div class="txt">
+                                    <p>Abbey Mortgage Bank Building
+                                        51 Okota Road, Chemist Bus Stop,
+                                        Okota-Isolo
+                                        Lagos, Nigeria</p>
+                                </div>
+                            </div>
+                            <div class="omo">
+                                <div class>
+                                    <i class="bi bi-envelope"></i>
+                                </div>
+                                <div class="txt">
+                                    <p>training@aledoyacademy.com</p>
+                                </div>
+                            </div>
+                            <div class="omo">
+                                <div class>
+                                    <i class="bi bi-telephone"></i>
+                                </div>
+                                <div class="txt">
+                                    <p>(+234) 913 597 1419</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <p class="li-gng">Join our newsletter</p>
+                            <div class="form">
+                                <div class="email">
+                                    <input type="email"
+                                        placeholder="Email Address">
+                                </div>
+                                <div class="link">
+                                    <a href="#">Submit</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 ft-icons">
+                            <span><i class="bi bi-facebook"></i></span>
+                            <span><i class="bi bi-instagram"></i></span>
+                            <span><i class="bi bi-twitter"></i></span>
+                            <span><i class="bi bi-linkedin"></i></span>
+                        </div>
+                        <div class="col-md-6">
+                            <p><i class="bi bi-c-circle"></i>2023 Aledoy
+                                Academy. All rights reserved</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- footer ends -->
     </body>
 </html>
