--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">The Academy</a>
+                        <a class="nav-link" href="academy.html">The Academy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Courses</a>
@@ -171,7 +171,7 @@
                     <div class="col-md-2">
                         <ul>
                             <li>Quicklinks</li>
-                            <li><a href="#">The Academy</a></li>
+                            <li><a href="academy.html">The Academy</a></li>
                             <li><a href="facility.html">Facility</a></li>
                             <li><a href="faqs.html">FAQs</a></li>
                             <li><a href="contact.html">Contact</a></li>
@@ -180,7 +180,7 @@
                     <div class="col-md-2">
                         <ul>
                             <li>Course</li>
-                            <li><a href="#">Web Design Frontend</a></li>
+                            <li><a href="wdf.html">Web Design Frontend</a></li>
                             <li><a href="#">Product Design (UI/UX)</a></li>
                             <li><a href="#">Data Science</a></li>
                             <li><a href="#">Python</a></li>
